# Gemspace

./: CMakeLists.txt  README.md  io.github.monsler.Gemspace.json  resources.qrc  testflatpak.sh
.cache/clangd/index/: Gembling.cpp.992D992B6CC1164B.idx  Gembling.hpp.5FB377CB467CD7E3.idx  MainWindow.cpp.A25A768BF864985B.idx  MainWindow.hpp.93F793C6885E4BFD.idx  PlasmaPercent.cpp.0844CD8E09A6AB30.idx  PlasmaPercent.hpp.D4AF8C1F429F3BEA.idx  Requester.cpp.A32BDA680B028A23.idx  Requester.hpp.7C2F500706D04DFE.idx  main.cpp.6568A8EA7B3F11F2.idx
data/: io.github.monsler.Gemspace.appdata.xml  io.github.monsler.Gemspace.desktop
include/: PlasmaPercent.hpp
include/browser/: Requester.hpp
include/ui/: Gembling.hpp  MainWindow.hpp
languages/: gemspace_en.ts  gemspace_ru.ts
src/: PlasmaPercent.cpp  main.cpp
src/browser/: Requester.cpp
src/ui/: Gembling.cpp  MainWindow.cpp
